--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         applicationId "com.hypertrack.logistics.android.github"
         minSdkVersion 23
         targetSdkVersion 30
-        versionName "0.11.0-SNAPSHOT"
+        versionName "0.10.10"
         versionCode codeFromVersionString(versionName)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "google_places_api_key", rootProject.properties.placesApiKey
@@ -86,7 +86,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.hypertrack:hypertrack:5.4.3'
+    implementation 'com.hypertrack:hypertrack:5.4.4'
 
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation project(path: ':android-kotlin-geohash')
