--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,7 +130,7 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:3.1.0'
 
-    implementation 'io.branch.sdk.android:library:5.0.1'
+    implementation 'io.branch.sdk.android:library:5.0.15'
     implementation 'com.google.firebase:firebase-appindexing:20.0.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
 
@@ -154,6 +154,8 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.4'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
