--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,13 +133,14 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.1.0'
 
     implementation 'io.branch.sdk.android:library:5.0.15'
-    implementation 'com.google.firebase:firebase-appindexing:20.0.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
 
     implementation 'com.amazonaws:aws-android-sdk-mobile-client:2.16.7'
 
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
-    implementation 'com.google.firebase:firebase-analytics:19.0.0'
+    implementation "com.google.firebase:firebase-messaging:23.0.0"
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.5'
+    implementation 'com.google.firebase:firebase-analytics:20.0.0'
+    implementation 'com.google.firebase:firebase-appindexing:20.0.0'
 
     implementation 'com.hypertrack:hypertrack-views:0.8.6'
     implementation 'com.hypertrack:maps-google:0.1.8'
