--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
 
         <activity
             android:name="com.hypertrack.android.ui.MainActivity"
-            android:label="@string/app_name">
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"
+            android:exported="true"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
