--- a/android-kotlin-geohash/build.gradle
+++ b/android-kotlin-geohash/build.gradle
@@ -1,15 +1,16 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
 
 android {
-    compileSdkVersion 30
-
+    compileSdkVersion versions.compile_sdk
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 30
+        minSdkVersion versions.min_sdk
+        targetSdkVersion versions.target_sdk
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -21,9 +22,10 @@ android {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin_version}"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation "junit:junit:${versions.junit}"
+
+    androidTestImplementation "androidx.test:runner:${versions.androidx_test_runner}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${versions.espresso_core}"
 }
