--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,36 +1,23 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-
-apply plugin: 'kotlin-kapt'
-
-apply plugin: 'com.google.gms.google-services'  // Google Services plugin
-
-apply plugin: 'com.google.firebase.crashlytics'
-
-apply plugin: "androidx.navigation.safeargs.kotlin"
-
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+    id 'androidx.navigation.safeargs.kotlin'
+}
 
 android {
-
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion versions.compile_sdk
     defaultConfig {
-        Properties properties = new Properties()
-        try {
-            properties.load(project.rootProject.file('local.properties').newDataInputStream())
-        } catch (Exception ignored) {}
-        def mockMode = properties.getProperty('mock_mode', 'false') == "true"
-        def recordingMode = properties.getProperty('recording_mode', 'false') == "true"
-
         applicationId "com.hypertrack.logistics.android.github"
-        minSdkVersion 23
-        targetSdkVersion 30
+        minSdkVersion versions.min_sdk
+        targetSdkVersion versions.target_sdk
         versionName "0.14.0-SNAPSHOT"
         versionCode codeFromVersionString(versionName)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         resValue "string", "google_places_api_key", rootProject.properties.placesApiKey
         resValue "string", "branch_io_api_key", rootProject.properties.logisticsBranchKey
         resValue "string", "awsLoginTestUserName", rootProject.properties.awsLoginTestUserName
@@ -40,8 +27,6 @@ android {
         if(rootProject.properties.graphqlApiKey == null) throw new Exception("GRAPHQL_API_KEY is null")
         buildConfigField("String", "SERVICES_API_KEY", "\"${rootProject.properties.servicesApiKey}\"")
         buildConfigField("String", "GRAPHQL_API_KEY", "\"${rootProject.properties.graphqlApiKey}\"")
-        buildConfigField("Boolean", "MOCK_MODE", mockMode.toString())
-        buildConfigField("Boolean", "RECORDING_MODE", recordingMode.toString())
     }
     signingConfigs {
         release {
@@ -65,21 +50,16 @@ android {
         }
     }
     compileOptions {
-        // Flag to enable support for the new language APIs
         coreLibraryDesugaringEnabled true
-
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    // For Kotlin projects
     kotlinOptions {
         jvmTarget = "1.8"
     }
     lintOptions {
         abortOnError false
     }
-// To inline the bytecode built with JVM target 1.8 into
-// bytecode that is being built with JVM target 1.6. (e.g. navArgs)
 }
 
 repositories {
@@ -90,78 +70,73 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.hypertrack:hypertrack:5.4.5'
-
-    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation "com.hypertrack:hypertrack:${versions.hypertrack_sdk}"
+    implementation "com.hypertrack:hypertrack-views:${versions.hypertrack_views}"
+    implementation "com.hypertrack:maps-google:${versions.hypertrack_maps_google}"
     implementation project(path: ':android-kotlin-geohash')
-    implementation project(path: ':google-maps-clustering')
 
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
-    kaptTest  'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}"
+    kaptTest  "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}"
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${versions.desugar_jdk_libs}"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin_version}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.kotlinx_coroutines}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.kotlinx_coroutines}"
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation "androidx.activity:activity-ktx:1.3.1"
-    implementation 'androidx.viewpager:viewpager:1.0.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation "androidx.core:core-ktx:${versions.core_ktx}"
+    implementation "androidx.appcompat:appcompat:${versions.appcompat}"
+    implementation "androidx.recyclerview:recyclerview:${versions.recyclerview}"
+    implementation "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${versions.lifecycle_extensions}"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:${versions.swiperefreshlayout}"
+    implementation "androidx.activity:activity-ktx:${versions.activity_ktx}"
+    implementation "androidx.viewpager:viewpager:${versions.viewpager}"
 
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.maps.android:android-maps-utils:2.2.3'
-    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation "com.google.android.material:material:${versions.material}"
+    implementation "com.google.android.libraries.places:places:${versions.google_places}"
+    implementation "com.google.android.gms:play-services-ads-identifier:${versions.play_services_ads_identifier}"
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation "com.google.android.gms:play-services-location:${versions.play_services_location}"
+    implementation "com.google.android.gms:play-services-maps:${versions.play_services_maps}"
+    implementation "com.google.maps.android:android-maps-utils:${versions.android_maps_utils}"
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "com.google.firebase:firebase-messaging:${versions.firebase_messaging}"
+    implementation "com.google.firebase:firebase-crashlytics:${versions.firebase_crashlytics}"
+    implementation "com.google.firebase:firebase-analytics:${versions.firebase_analytics}"
+    implementation "com.google.firebase:firebase-appindexing:${versions.firebase_appindexing}"
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.3'
-    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
-    implementation 'com.squareup.retrofit2:converter-scalars:2.6.3'
-    implementation 'com.squareup.moshi:moshi:1.11.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${versions.lifecycle_livedata_ktx}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle_viewmodel_ktx}"
 
-    implementation 'com.airbnb.android:lottie:3.1.0'
+    implementation "androidx.navigation:navigation-fragment-ktx:${versions.nav_version}"
+    implementation "androidx.navigation:navigation-ui-ktx:${versions.nav_version}"
 
-    implementation 'io.branch.sdk.android:library:5.0.15'
-    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
+    implementation "com.squareup.okhttp3:logging-interceptor:${versions.logging_interceptor}"
+    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
+    implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
+    implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit_converter_moshi}"
+    implementation "com.squareup.retrofit2:converter-scalars:${versions.retrofit_converter_scalars}"
+    implementation "com.squareup.moshi:moshi:${versions.moshi}"
 
-    implementation 'com.amazonaws:aws-android-sdk-mobile-client:2.16.7'
+    implementation "com.airbnb.android:lottie:${versions.lottie}"
+    implementation "io.branch.sdk.android:library:${versions.branch}"
+    implementation "com.amazonaws:aws-android-sdk-mobile-client:${versions.aws_android_sdk_mobile_client}"
 
-    implementation "com.google.firebase:firebase-messaging:23.0.0"
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.5'
-    implementation 'com.google.firebase:firebase-analytics:20.0.0'
-    implementation 'com.google.firebase:firebase-appindexing:20.0.0'
+    // test
+    testImplementation "junit:junit:${versions.junit}"
+    testImplementation "androidx.test:core:${versions.androidx_test_core}"
+    testImplementation "androidx.arch.core:core-testing:${versions.androidx_arch_core_testing}"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.kotlinx_coroutines_test}"
+    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
+    testImplementation "com.squareup.okhttp3:mockwebserver:${versions.okhttp_mock_web_server}"
+    testImplementation "io.mockk:mockk:${versions.mockk}"
 
-    implementation 'com.hypertrack:hypertrack-views:0.8.6'
-    implementation 'com.hypertrack:maps-google:0.1.8'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
-
-    testImplementation 'junit:junit:4.13.2'
-
-    //noinspection GradleDependency
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.2.2'
-    testImplementation "io.mockk:mockk:1.10.6"
-    testImplementation "androidx.test:core:1.4.0"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation 'org.robolectric:robolectric:4.4'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // androidTest
+    androidTestImplementation "androidx.test.ext:junit:${versions.androidx_junit}"
+    androidTestImplementation "androidx.test:rules:${versions.androidx_test_rules}"
+    androidTestImplementation "androidx.test:runner:${versions.androidx_test_runner}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${versions.espresso_core}"
 }
 
 def codeFromVersionString(versionString) {
