--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,77 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.4.31'
-    ext.nav_version = "2.3.5"
+    ext.versions = [:]
+
+    versions.compile_sdk = 31
+    versions.target_sdk = 31
+    versions.min_sdk = 21
+
+    versions.hypertrack_sdk = "5.4.5"
+    versions.hypertrack_views = "0.8.6"
+    versions.hypertrack_maps_google = "0.1.8"
+
+    versions.build_gradle = "4.2.2"
+    versions.firebase_crashlytics_gradle = "2.6.1"
+    versions.google_services = "4.3.10"
+
+    versions.appcompat = "1.4.1"
+    versions.activity_ktx = "1.4.0"
+    versions.aws_android_sdk_mobile_client = "2.16.7"
+    versions.android_maps_utils = "2.2.3"
+    versions.branch = "5.0.15"
+    versions.constraintlayout = "2.1.3"
+    versions.core_ktx = "1.7.0"
+    versions.desugar_jdk_libs = "1.1.5"
+    versions.firebase_messaging = "23.0.0"
+    versions.firebase_crashlytics = "18.2.7"
+    versions.firebase_analytics = "20.0.2"
+    versions.firebase_appindexing = "20.0.0"
+    versions.google_places = "2.5.0"
+    versions.kotlinx_coroutines = "1.5.2"
+    versions.kotlin_version = "1.4.31"
+    versions.lifecycle_livedata_ktx = "2.4.0"
+    versions.lifecycle_viewmodel_ktx = "2.4.0"
+    versions.lifecycle_extensions = "2.2.0"
+    versions.logging_interceptor = "4.4.0"
+    versions.lottie = "3.1.0"
+    versions.material = "1.5.0"
+    versions.moshi = "1.11.0"
+    versions.nav_version = "2.3.5"
+    versions.okhttp = "4.9.3"
+    versions.play_services_location = "19.0.1"
+    versions.play_services_ads_identifier = "18.0.1"
+    versions.play_services_maps = "18.0.2"
+    versions.recyclerview = "1.2.1"
+    versions.retrofit = "2.6.3"
+    versions.retrofit_converter_moshi = "2.4.0"
+    versions.retrofit_converter_scalars = "2.6.3"
+    versions.swiperefreshlayout = "1.1.0"
+    versions.viewpager = "1.0.0"
+
+    // test
+    versions.junit = "4.13.2"
+    versions.androidx_test_core = "1.4.0"
+    versions.androidx_arch_core_testing = "2.1.0"
+    versions.kotlinx_coroutines_test = "1.3.5"
+    versions.robolectric = "4.4"
+    versions.mockk = "1.12.1"
+    versions.okhttp_mock_web_server = "4.2.2"
+
+    // androidTest
+    versions.androidx_junit = "1.1.3"
+    versions.androidx_test_rules = "1.4.0"
+    versions.androidx_test_runner = "1.4.0"
+    versions.espresso_core = "3.4.0"
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.3.8'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.6.1'
+        classpath "com.android.tools.build:gradle:${versions.build_gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin_version}"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${versions.nav_version}"
+        classpath "com.google.gms:google-services:${versions.google_services}"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:${versions.firebase_crashlytics_gradle}"
      }
 }
 
