--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,16 @@
 include ':app'
 rootProject.name='visits-android'
 include ':android-kotlin-geohash'
+
+dependencyResolutionManagement {
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+
+        maven {
+            name 'hypertrack'
+            url 'https://s3-us-west-2.amazonaws.com/m2.hypertrack.com/'
+        }
+    }
+}
