--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,23 +8,22 @@
         android:required="true" />
     <application
         android:name="com.hypertrack.android.utils.MyApplication"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
-        android:allowBackup="false"
-        android:fullBackupContent="false"
-        >
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
         <!-- android:launchMode="singleTask" is needed for Branch -->
         <activity
             android:name="com.hypertrack.android.ui.MainActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name"
             android:exported="true"
+            android:label="@string/app_name"
             android:launchMode="singleTask"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,8 +49,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
-                    android:host="hypertrack-logistics.app.link" />
+                    android:host="hypertrack-logistics.app.link"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
 
@@ -64,6 +63,10 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_stat_notification" />
+
+        <meta-data
+            android:name="io.sentry.dsn"
+            android:value="https://78867c2b62c3464c91c63af6bb139567:e87320e0468d4573ad2228c82bf0a576@sentry.htprod.hypertrack.com/9" />
 
         <service
             android:name="com.hypertrack.android.messaging.VisitsMessagingService"
