--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         applicationId "com.hypertrack.logistics.android.github"
         minSdkVersion versions.min_sdk
         targetSdkVersion versions.target_sdk
-        versionName "0.19.8"
+        versionName "0.20.0-SNAPSHOT"
         versionCode codeFromVersionString(versionName)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
