--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,51 @@
 buildscript {
     ext.versions = [:]
 
-    versions.compile_sdk = 31
+    versions.compile_sdk = 33
     versions.target_sdk = 31
     versions.min_sdk = 23
 
     versions.hypertrack_sdk = "6.3.0"
 
-    versions.build_gradle = "7.0.3"
     versions.firebase_crashlytics_gradle = "2.6.1"
     versions.google_services = "4.3.10"
 
+    // updating breaks the tests (kotlin 1.7 dependency?)
     versions.appcompat = "1.4.1"
+    // updating breaks the tests (kotlin 1.7 dependency?)
     versions.activity_ktx = "1.4.0"
     versions.aws_android_sdk_mobile_client = "2.16.7"
     versions.android_maps_utils = "2.2.3"
     versions.branch = "5.1.4"
-    versions.constraintlayout = "2.1.3"
+    versions.constraintlayout = "2.1.4"
+    // updating breaks the tests (kotlin 1.7 dependency?)
     versions.core_ktx = "1.7.0"
     versions.desugar_jdk_libs = "1.1.5"
-    versions.firebase_messaging = "23.0.0"
-    versions.firebase_crashlytics = "18.2.7"
-    versions.firebase_analytics = "20.0.2"
+    versions.firebase_messaging = "23.1.0"
+    versions.firebase_crashlytics = "18.3.1"
+    versions.firebase_analytics = "21.2.0"
     versions.firebase_appindexing = "20.0.0"
-    versions.google_places = "2.5.0"
+    versions.google_places = "2.6.0"
     versions.kotlinx_coroutines = "1.5.2"
+    // updating breaks the tests
     versions.kotlin_version = "1.6.21"
+    // updating breaks the tests (kotlin 1.7 dependency?)
     versions.lifecycle_livedata_ktx = "2.4.0"
+    // updating breaks the tests (kotlin 1.7 dependency?)
     versions.lifecycle_viewmodel_ktx = "2.4.0"
     versions.lifecycle_extensions = "2.2.0"
     versions.logging_interceptor = "4.4.0"
     versions.lottie = "3.1.0"
     versions.material = "1.5.0"
     versions.moshi = "1.13.0"
+    // updating breaks the tests (kotlin 1.7 dependency?)
     versions.nav_version = "2.4.0"
     versions.okhttp = "4.9.3"
-    versions.play_services_location = "19.0.1"
+    versions.play_services_location = "21.0.0"
     versions.play_services_ads_identifier = "18.0.1"
-    versions.play_services_maps = "18.0.2"
+    versions.play_services_maps = "18.1.0"
+    versions.play_core = "1.10.3"
+    versions.play_core_ktx = "1.8.1"
     versions.recyclerview = "1.2.1"
     versions.retrofit = "2.6.3"
     versions.retrofit_converter_moshi = "2.4.0"
@@ -65,12 +73,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${versions.build_gradle}"
+        // using this version because kotlin-android-extensions is deprecated in later versions
+        // not using variables for version to take advantage of Android Studio GUI for changing plugin version
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin_version}"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${versions.nav_version}"
         classpath "com.google.gms:google-services:${versions.google_services}"
         classpath "com.google.firebase:firebase-crashlytics-gradle:${versions.firebase_crashlytics_gradle}"
-     }
+    }
 }
 
 task clean(type: Delete) {
